objects/CONFIGURAZIONE_PROXY_PORTALE__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POP__c</fullName>
        <label>POP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Lavorazione__c</fullName>
        <label>Tipo_Lavorazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CONFIGURAZIONE PROXY PORTALE</label>
</CustomObject>